[JAVA-4584] Clean up